[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/settingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Custom Fonts/settingsMenu_30.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]

[node name="settingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 960, 540 )
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.211765, 0.0117647, 0.333333, 1 )

[node name="settingsTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 540 )
tab_align = 0

[node name="Audio" type="Tabs" parent="settingsTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="audioTabContainer" type="MarginContainer" parent="settingsTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="audioSettingsGrid" type="GridContainer" parent="settingsTabs/Audio/audioTabContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 922.0
margin_bottom = 474.0
theme = SubResource( 1 )
custom_constants/vseparation = 6
columns = 2

[node name="masterVolLabel" type="Label" parent="settingsTabs/Audio/audioTabContainer/audioSettingsGrid"]
margin_right = 220.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Master Volume"

[node name="masterVolSlider" type="HSlider" parent="settingsTabs/Audio/audioTabContainer/audioSettingsGrid"]
margin_left = 442.0
margin_right = 892.0
margin_bottom = 42.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="musicVolLabel" type="Label" parent="settingsTabs/Audio/audioTabContainer/audioSettingsGrid"]
margin_top = 48.0
margin_right = 220.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"

[node name="musicVolSlider" type="HSlider" parent="settingsTabs/Audio/audioTabContainer/audioSettingsGrid"]
margin_left = 442.0
margin_top = 48.0
margin_right = 892.0
margin_bottom = 90.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="sfxVolLabel" type="Label" parent="settingsTabs/Audio/audioTabContainer/audioSettingsGrid"]
margin_top = 96.0
margin_right = 220.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )
text = "Effects Volume"

[node name="sfxVolSlider" type="HSlider" parent="settingsTabs/Audio/audioTabContainer/audioSettingsGrid"]
margin_left = 442.0
margin_top = 96.0
margin_right = 892.0
margin_bottom = 138.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Video" type="Tabs" parent="settingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="videoTabContainer" type="MarginContainer" parent="settingsTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="videoSettingsGrid" type="GridContainer" parent="settingsTabs/Video/videoTabContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 922.0
margin_bottom = 474.0
theme = SubResource( 1 )
custom_constants/vseparation = 6
columns = 2

[node name="displayModeLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_top = 3.0
margin_right = 311.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "Display Mode"

[node name="displayOptionButton" type="OptionButton" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_left = 625.0
margin_right = 892.0
margin_bottom = 73.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 1

[node name="vSyncLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_top = 79.0
margin_right = 311.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 2 )
text = "vSync"

[node name="vSyncToggleButton" type="CheckButton" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_left = 816.0
margin_top = 79.0
margin_right = 892.0
margin_bottom = 146.0
size_flags_horizontal = 10

[node name="displayFpsLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_top = 152.0
margin_right = 311.0
margin_bottom = 219.0
custom_fonts/font = ExtResource( 2 )
text = "Display FPS"

[node name="fpsToggleButton" type="CheckButton" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_left = 816.0
margin_top = 152.0
margin_right = 892.0
margin_bottom = 219.0
size_flags_horizontal = 10

[node name="maxFpsLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_top = 225.0
margin_right = 311.0
margin_bottom = 292.0
custom_fonts/font = ExtResource( 2 )
text = "Max FPS"

[node name="fpsSliderContainer" type="HBoxContainer" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_left = 315.0
margin_top = 225.0
margin_right = 892.0
margin_bottom = 292.0

[node name="fpsValueLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid/fpsSliderContainer"]
margin_left = 25.0
margin_right = 123.0
margin_bottom = 67.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 2 )
text = "Max"

[node name="fpsSlider" type="HSlider" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid/fpsSliderContainer"]
margin_left = 127.0
margin_right = 577.0
margin_bottom = 67.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 11
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0

[node name="bloomLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_top = 298.0
margin_right = 311.0
margin_bottom = 365.0
custom_fonts/font = ExtResource( 2 )
text = "Bloom"

[node name="bloomToggleButton" type="CheckButton" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_left = 816.0
margin_top = 298.0
margin_right = 892.0
margin_bottom = 365.0
size_flags_horizontal = 10

[node name="brightnessLabel" type="Label" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_top = 371.0
margin_right = 311.0
margin_bottom = 438.0
custom_fonts/font = ExtResource( 2 )
text = "Brightness"

[node name="brightnessSlider" type="HSlider" parent="settingsTabs/Video/videoTabContainer/videoSettingsGrid"]
margin_left = 442.0
margin_top = 371.0
margin_right = 892.0
margin_bottom = 438.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 8
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Controls" type="Tabs" parent="settingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="controlsTabContainer" type="MarginContainer" parent="settingsTabs/Controls"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="controlsTabGrid" type="GridContainer" parent="settingsTabs/Controls/controlsTabContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 922.0
margin_bottom = 474.0
theme = SubResource( 1 )
custom_constants/vseparation = 6
columns = 2

[connection signal="value_changed" from="settingsTabs/Audio/audioTabContainer/audioSettingsGrid/masterVolSlider" to="." method="_on_masterVolSlider_value_changed"]
[connection signal="value_changed" from="settingsTabs/Audio/audioTabContainer/audioSettingsGrid/musicVolSlider" to="." method="_on_musicVolSlider_value_changed"]
[connection signal="value_changed" from="settingsTabs/Audio/audioTabContainer/audioSettingsGrid/sfxVolSlider" to="." method="_on_sfxVolSlider_value_changed"]
[connection signal="item_selected" from="settingsTabs/Video/videoTabContainer/videoSettingsGrid/displayOptionButton" to="." method="_on_displayOptionButton_item_selected"]
[connection signal="toggled" from="settingsTabs/Video/videoTabContainer/videoSettingsGrid/vSyncToggleButton" to="." method="_on_vSyncToggleButton_toggled"]
[connection signal="toggled" from="settingsTabs/Video/videoTabContainer/videoSettingsGrid/fpsToggleButton" to="." method="_on_fpsToggleButton_toggled"]
[connection signal="value_changed" from="settingsTabs/Video/videoTabContainer/videoSettingsGrid/fpsSliderContainer/fpsSlider" to="." method="_on_fpsSlider_value_changed"]
[connection signal="toggled" from="settingsTabs/Video/videoTabContainer/videoSettingsGrid/bloomToggleButton" to="." method="_on_bloomToggleButton_toggled"]
[connection signal="value_changed" from="settingsTabs/Video/videoTabContainer/videoSettingsGrid/brightnessSlider" to="." method="_on_brightnessSlider_value_changed"]
